Initial commit (the first one failed)

--- a/src/main/resources/assets/towerdefense/lang/en_us.json
+++ b/src/main/resources/assets/towerdefense/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "block.towerdefense.start_block": "Start Block",
+  "block.towerdefense.death_block": "Death Block",
   "itemGroup.towerdefensetab": "Tower Defense Tab"
 }
