--- a/src/main/resources/assets/towerdefense/lang/en_us.json
+++ b/src/main/resources/assets/towerdefense/lang/en_us.json
@@ -2,5 +2,6 @@
   "block.towerdefense.start_block": "Start Block",
   "block.towerdefense.death_block": "Death Block",
   "item.towerdefense.student_spawn_egg": "Student Spawn Egg",
+  "item.towerdefense.teacher_spawn_egg": "Teacher Spawn Egg",
   "itemGroup.towerdefensetab": "Tower Defense Tab"
 }
