Initial commit (the first one failed)

--- a/src/main/resources/assets/towerdefense/lang/en_us.json
+++ b/src/main/resources/assets/towerdefense/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.towerdefense.student_spawn_egg": "Student Spawn Egg",
   "item.towerdefense.teacher_spawn_egg": "Teacher Spawn Egg",
   "item.towerdefense.trade_master_spawn_egg": "Trade Master Spawn Egg",
+  "item.towerdefense.remover": "Remover",
   "itemGroup.towerdefensetab": "Tower Defense Tab",
   "entity.minecraft.villager.towerdefense.trade_master": "Trade Master",
   "entity.towerdefense.trade_master.towerdefense.trade_master": "Trade Master"
