Initial commit (the first one failed)

--- a/src/main/resources/assets/towerdefense/lang/en_us.json
+++ b/src/main/resources/assets/towerdefense/lang/en_us.json
@@ -3,7 +3,16 @@
   "block.towerdefense.death_block": "Death Block",
   "block.towerdefense.trade_block": "Trade Block",
   "item.towerdefense.student_spawn_egg": "Student Spawn Egg",
+  "item.towerdefense.student_elementary_spawn_egg": "Student Elementary Spawn Egg",
+  "item.towerdefense.student_intermediate_spawn_egg": "Student Intermediate Spawn Egg",
+  "item.towerdefense.student_senior_spawn_egg": "Student Senior Spawn Egg",
   "item.towerdefense.teacher_spawn_egg": "Teacher Spawn Egg",
+  "item.towerdefense.teacher_bow_level_1_spawn_egg": "Teacher Bow Level 1 Spawn Egg",
+  "item.towerdefense.teacher_bow_level_2_spawn_egg": "Teacher Bow Level 2 Spawn Egg",
+  "item.towerdefense.teacher_bow_level_3_spawn_egg": "Teacher Bow Level 3 Spawn Egg",
+  "item.towerdefense.teacher_sword_level_1_spawn_egg": "Teacher Sword Level 1 Spawn Egg",
+  "item.towerdefense.teacher_sword_level_2_spawn_egg": "Teacher Sword Level 2 Spawn Egg",
+  "item.towerdefense.teacher_sword_level_3_spawn_egg": "Teacher Sword Level 3 Spawn Egg",
   "item.towerdefense.trade_master_spawn_egg": "Trade Master Spawn Egg",
   "item.towerdefense.remover": "Remover",
   "itemGroup.towerdefensetab": "Tower Defense Tab",
